<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white">
        <TextView
            android:id="@+id/inning_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/horizonal_margin_short"
            android:layout_marginTop="@dimen/horizonal_margin_short"
            android:textSize="18sp"
            android:textColor="@color/inning_color"
            android:text="@string/inning_number"
            android:textAllCaps="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_a"
                android:textColor="@color/team_color"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/vertical_margin_short"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/team_a_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battling"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/vertical_margin_short"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/one"
                android:textSize="43sp"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:id="@+id/team_a_game_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/out"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/team_a_out_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plus_out"
                android:layout_marginLeft="@dimen/horizonal_margin"
                android:layout_marginRight="@dimen/horizonal_margin"
                android:onClick="teamAOut"/>
            <Button
                android:id="@+id/team_a_first_base_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_base"
                android:layout_marginLeft="@dimen/horizonal_margin"
                android:layout_marginRight="@dimen/horizonal_margin"
                android:onClick="teamAFirstBase"/>
            <Button
                android:id="@+id/team_a_second_base_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_base"
                android:layout_marginLeft="@dimen/horizonal_margin"
                android:layout_marginRight="@dimen/horizonal_margin"
                android:onClick="teamASecondBase"/>
            <Button
                android:id="@+id/team_a_third_base_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/third_base"
                android:layout_marginLeft="@dimen/horizonal_margin"
                android:layout_marginRight="@dimen/horizonal_margin"
                android:onClick="teamAThirdBase"/>
            <Button
                android:id="@+id/team_a_home_run_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_run"
                android:layout_marginLeft="@dimen/horizonal_margin"
                android:layout_marginRight="@dimen/horizonal_margin"
                android:onClick="teamAHomeRun"/>
            <Button
                android:id="@+id/team_a_reset_run"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_run"
                android:layout_marginLeft="@dimen/horizonal_margin"
                android:layout_marginRight="@dimen/horizonal_margin"
                android:onClick="teamAResetRun"/>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginBottom="@dimen/vertical_margin"
            ></View>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_b"
                android:textColor="@color/team_color"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/vertical_margin_short"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/team_b_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defense"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/vertical_margin_short"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/one"
                android:textSize="43sp"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:id="@+id/team_b_game_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/base_run"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/team_b_out_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plus_out"
                android:layout_marginLeft="@dimen/horizonal_margin"
                android:layout_marginRight="@dimen/horizonal_margin"
                android:onClick="teamBOut"/>
            <Button
                android:id="@+id/team_b_first_base_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_base"
                android:layout_marginLeft="@dimen/horizonal_margin"
                android:layout_marginRight="@dimen/horizonal_margin"
                android:onClick="teamBFirstBase"/>
            <Button
                android:id="@+id/team_b_second_base_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_base"
                android:layout_marginLeft="@dimen/horizonal_margin"
                android:layout_marginRight="@dimen/horizonal_margin"
                android:onClick="teamBSecondBase"/>
            <Button
                android:id="@+id/team_b_third_base_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/third_base"
                android:layout_marginLeft="@dimen/horizonal_margin"
                android:layout_marginRight="@dimen/horizonal_margin"
                android:onClick="teamBThirdBase"/>
            <Button
                android:id="@+id/team_b_home_run_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_run"
                android:layout_marginLeft="@dimen/horizonal_margin"
                android:layout_marginRight="@dimen/horizonal_margin"
                android:onClick="teamBHomeRun"/>
            <Button
                android:id="@+id/team_b_reset_run"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_run"
                android:layout_marginLeft="@dimen/horizonal_margin"
                android:layout_marginRight="@dimen/horizonal_margin"
                android:onClick="teamBResetRun"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:onClick="resetGame"/>
    </LinearLayout>
    </LinearLayout>
